--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <li><a href="#portfolio">Portfolio</a></li>
 <li><a href="#service">Service</a></li>
 <li><a href="#contact">Contact</a></li>
-<li class="download_cv"><a href="img/cv/Kamlessh_resume.pdf" download><span>Download CV</span></a></li>
+<li class="download_cv"><a href="img/cv/Kamlessh_resume.pdf" download><span>Download </span></a></li>
 </ul>
 </div>
 </div>
